--- a/ML_lab3.ipynb
+++ b/ML_lab3.ipynb
@@ -66,12 +66,12 @@
       ],
       "metadata": {
         "id": "1ctEtJYagg5D",
-        "outputId": "e90c8a60-c86a-4cf9-90eb-d3ccb194403f",
+        "outputId": "8271486f-665b-4142-d44b-168dafca25c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,12 +97,12 @@
       ],
       "metadata": {
         "id": "dzr_txLDf-fe",
-        "outputId": "3df887ca-dadc-4a0a-e778-5828e846acc7",
+        "outputId": "edb84d96-9f51-40d0-b220-090b116c67af",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +120,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 1
         }
       ]
     },
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "DgnX5MaOEuoD"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -169,7 +169,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +304,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +386,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -510,7 +510,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +584,7 @@
       "source": [
         "#Проверка на дубли\n",
         "dupls = df.duplicated()\n",
-        "\n",
+        "# Если len нужен был здесь, то он не работает - функция возвращает series булевых и len тупо считает их кол-во\n",
         "count = 0\n",
         "for i in dupls:\n",
         "  if (i): count +=1\n",
@@ -593,19 +593,22 @@
       ],
       "metadata": {
         "id": "AIlBilOY2T6a",
-        "outputId": "b8d5ec9d-c3c6-4d0d-b9cd-a93ec0523150",
+        "outputId": "f29f1117-686f-45f9-f44b-14278d0bc57a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": 25,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10677\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     },
@@ -622,12 +625,12 @@
       ],
       "metadata": {
         "id": "DwSF8HGIV1IM",
-        "outputId": "e520850a-4f08-4fa1-83b4-859a708f7328",
+        "outputId": "3e89f5fb-e74e-4421-923b-363c73081294",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -637,7 +640,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 29
         }
       ]
     },
@@ -656,22 +659,22 @@
       ],
       "metadata": {
         "id": "utEK5KD-2ec_",
-        "outputId": "63750e1e-281e-4025-a887-b8b34240a1b5",
+        "outputId": "6ae4efcd-6e8b-42c2-8272-0dcd78458dc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "101"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 27
         }
       ]
     },
@@ -715,7 +718,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -814,7 +817,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -915,36 +918,35 @@
         "df[\"DISTRICT\"] = df[\"DISTRICT\"].astype(\"category\")\n",
         "\n",
         "\n",
-        "# Create an instance of OneHotEncoder\n",
         "encoder = OneHotEncoder()\n",
         "cat_features = df.select_dtypes(include=['category']).columns\n",
-        "x = encoder.fit_transform(df[[\"STATE/UT\"]]).toarray()\n",
-        "x"
+        "\n",
+        "df_cat_features = pd.get_dummies(df, columns=cat_features)\n",
+        "encoded_features = encoder.fit_transform(df[cat_features])\n",
+        "\n",
+        "encoded_columns = encoder.get_feature_names_out(cat_features)\n",
+        "encoded_columns\n"
       ],
       "metadata": {
         "id": "7qHieucyhIp_",
-        "outputId": "8239188c-1128-4782-9c1f-45f499934740",
+        "outputId": "ecc659a4-86a0-480d-fe33-35d155fe83cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       ...,\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.],\n",
-              "       [0., 0., 0., ..., 0., 0., 0.]])"
+              "array(['DISTRICT_24 PARGANAS NORTH', 'DISTRICT_24 PARGANAS SOUTH',\n",
+              "       'DISTRICT_A and N ISLANDS', ..., 'STATE/UT _Uttarakhand',\n",
+              "       'STATE/UT _WEST BENGAL', 'STATE/UT _West Bengal'], dtype=object)"
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 23
         }
       ]
     },
