--- a/Задание_4.ipynb
+++ b/Задание_4.ipynb
@@ -48,11 +48,11 @@
       "execution_count": 22,
       "metadata": {
         "id": "T1dV5-wj6zEu",
-        "outputId": "1d417f2c-65bf-458b-ed11-5dbe0382bb5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "outputId": "1d417f2c-65bf-458b-ed11-5dbe0382bb5a"
       },
       "outputs": [
         {
@@ -546,11 +546,11 @@
       ],
       "metadata": {
         "id": "kU-u5CltPbJ-",
-        "outputId": "1536be96-e435-4cda-c120-e3a5100434d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 320
-        }
+        },
+        "outputId": "1536be96-e435-4cda-c120-e3a5100434d9"
       },
       "execution_count": 16,
       "outputs": [
@@ -986,12 +986,12 @@
         "# Категориальных признаков нет"
       ],
       "metadata": {
-        "id": "rjp8ACYXDede",
-        "outputId": "ba17e10e-e26b-4a56-a275-f1cb89ec3dbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
-        }
+        },
+        "id": "rjp8ACYXDede",
+        "outputId": "ba17e10e-e26b-4a56-a275-f1cb89ec3dbc"
       },
       "execution_count": 25,
       "outputs": [
@@ -1483,11 +1483,11 @@
       ],
       "metadata": {
         "id": "emwADdn1RhuN",
-        "outputId": "b3c290d2-cebf-4d13-8411-aca232929683",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 489
-        }
+        },
+        "outputId": "b3c290d2-cebf-4d13-8411-aca232929683"
       },
       "execution_count": 27,
       "outputs": [
@@ -1533,10 +1533,10 @@
       ],
       "metadata": {
         "id": "mURhmgww9rrQ",
-        "outputId": "aec0d694-8911-41c8-da87-9f73746cfc32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aec0d694-8911-41c8-da87-9f73746cfc32"
       },
       "execution_count": 29,
       "outputs": [
@@ -1594,11 +1594,11 @@
       ],
       "metadata": {
         "id": "qbmCD4V4RiKW",
-        "outputId": "6be34e33-07e6-4af3-bf4b-72555d2bb81e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 527
-        }
+        },
+        "outputId": "6be34e33-07e6-4af3-bf4b-72555d2bb81e"
       },
       "execution_count": 31,
       "outputs": [
@@ -1665,10 +1665,10 @@
       ],
       "metadata": {
         "id": "MkQ6Fr63Rie7",
-        "outputId": "58ff1ebe-fa4c-4aba-ac80-fc89dd6b1e27",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "58ff1ebe-fa4c-4aba-ac80-fc89dd6b1e27"
       },
       "execution_count": 43,
       "outputs": [
@@ -1728,11 +1728,11 @@
       ],
       "metadata": {
         "id": "YF-BNGiKRi1U",
-        "outputId": "c0f76476-d3bd-4998-d169-736b3a38ab01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 452
-        }
+        },
+        "outputId": "c0f76476-d3bd-4998-d169-736b3a38ab01"
       },
       "execution_count": 42,
       "outputs": [
@@ -1820,11 +1820,11 @@
       ],
       "metadata": {
         "id": "41otDBM2PfEP",
-        "outputId": "4506125e-a656-42b9-afea-83f8294dedd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 887
-        }
+        },
+        "outputId": "4506125e-a656-42b9-afea-83f8294dedd7"
       },
       "execution_count": 44,
       "outputs": [
@@ -1877,11 +1877,11 @@
       ],
       "metadata": {
         "id": "fb30H4awRjfQ",
-        "outputId": "23dd5550-7fed-44fa-de24-3abeb8251f92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 466
-        }
+        },
+        "outputId": "23dd5550-7fed-44fa-de24-3abeb8251f92"
       },
       "execution_count": 45,
       "outputs": [
@@ -1926,12 +1926,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "NKFG2lyuY7Av",
-        "outputId": "b2a0b39a-88ca-4468-a5eb-f5c2ca58fb87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 466
-        }
+        },
+        "id": "NKFG2lyuY7Av",
+        "outputId": "b2a0b39a-88ca-4468-a5eb-f5c2ca58fb87"
       },
       "execution_count": 46,
       "outputs": [
@@ -1974,12 +1974,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "OV4J1I8NZGIv",
-        "outputId": "2c981d54-2f9b-473f-876e-91e4512a6b32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 466
-        }
+        },
+        "id": "OV4J1I8NZGIv",
+        "outputId": "2c981d54-2f9b-473f-876e-91e4512a6b32"
       },
       "execution_count": 47,
       "outputs": [
@@ -2042,10 +2042,112 @@
         "!pip install ydata-profiling"
       ],
       "metadata": {
-        "id": "yZqfH8KMI0sA"
+        "id": "yZqfH8KMI0sA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "645c5d2a-0e3d-4716-e41a-1b0e44c528a7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting ydata-profiling\n",
+            "  Downloading ydata_profiling-4.6.1-py2.py3-none-any.whl (357 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/357.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━\u001b[0m \u001b[32m225.3/357.5 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m357.5/357.5 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: scipy<1.12,>=1.4.1 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (1.11.3)\n",
+            "Requirement already satisfied: pandas!=1.4.0,<2.1,>1.1 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (1.5.3)\n",
+            "Requirement already satisfied: matplotlib<=3.7.3,>=3.2 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (3.7.1)\n",
+            "Collecting pydantic>=2 (from ydata-profiling)\n",
+            "  Downloading pydantic-2.4.2-py3-none-any.whl (395 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m395.8/395.8 kB\u001b[0m \u001b[31m9.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: PyYAML<6.1,>=5.0.0 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (6.0.1)\n",
+            "Requirement already satisfied: jinja2<3.2,>=2.11.1 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (3.1.2)\n",
+            "Collecting visions[type_image_path]==0.7.5 (from ydata-profiling)\n",
+            "  Downloading visions-0.7.5-py3-none-any.whl (102 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m102.7/102.7 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy<1.26,>=1.16.0 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (1.23.5)\n",
+            "Collecting htmlmin==0.1.12 (from ydata-profiling)\n",
+            "  Downloading htmlmin-0.1.12.tar.gz (19 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Collecting phik<0.13,>=0.11.1 (from ydata-profiling)\n",
+            "  Downloading phik-0.12.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (679 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m679.5/679.5 kB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: requests<3,>=2.24.0 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (2.31.0)\n",
+            "Requirement already satisfied: tqdm<5,>=4.48.2 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (4.66.1)\n",
+            "Requirement already satisfied: seaborn<0.13,>=0.10.1 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (0.12.2)\n",
+            "Collecting multimethod<2,>=1.4 (from ydata-profiling)\n",
+            "  Downloading multimethod-1.10-py3-none-any.whl (9.9 kB)\n",
+            "Requirement already satisfied: statsmodels<1,>=0.13.2 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (0.14.0)\n",
+            "Collecting typeguard<5,>=4.1.2 (from ydata-profiling)\n",
+            "  Downloading typeguard-4.1.5-py3-none-any.whl (34 kB)\n",
+            "Collecting imagehash==4.3.1 (from ydata-profiling)\n",
+            "  Downloading ImageHash-4.3.1-py2.py3-none-any.whl (296 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m296.5/296.5 kB\u001b[0m \u001b[31m13.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: wordcloud>=1.9.1 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (1.9.2)\n",
+            "Collecting dacite>=1.8 (from ydata-profiling)\n",
+            "  Downloading dacite-1.8.1-py3-none-any.whl (14 kB)\n",
+            "Requirement already satisfied: numba<0.59.0,>=0.56.0 in /usr/local/lib/python3.10/dist-packages (from ydata-profiling) (0.58.1)\n",
+            "Requirement already satisfied: PyWavelets in /usr/local/lib/python3.10/dist-packages (from imagehash==4.3.1->ydata-profiling) (1.4.1)\n",
+            "Requirement already satisfied: pillow in /usr/local/lib/python3.10/dist-packages (from imagehash==4.3.1->ydata-profiling) (9.4.0)\n",
+            "Requirement already satisfied: attrs>=19.3.0 in /usr/local/lib/python3.10/dist-packages (from visions[type_image_path]==0.7.5->ydata-profiling) (23.1.0)\n",
+            "Requirement already satisfied: networkx>=2.4 in /usr/local/lib/python3.10/dist-packages (from visions[type_image_path]==0.7.5->ydata-profiling) (3.2.1)\n",
+            "Collecting tangled-up-in-unicode>=0.0.4 (from visions[type_image_path]==0.7.5->ydata-profiling)\n",
+            "  Downloading tangled_up_in_unicode-0.2.0-py3-none-any.whl (4.7 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.7/4.7 MB\u001b[0m \u001b[31m13.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2<3.2,>=2.11.1->ydata-profiling) (2.1.3)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib<=3.7.3,>=3.2->ydata-profiling) (1.2.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib<=3.7.3,>=3.2->ydata-profiling) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib<=3.7.3,>=3.2->ydata-profiling) (4.44.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib<=3.7.3,>=3.2->ydata-profiling) (1.4.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib<=3.7.3,>=3.2->ydata-profiling) (23.2)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib<=3.7.3,>=3.2->ydata-profiling) (3.1.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib<=3.7.3,>=3.2->ydata-profiling) (2.8.2)\n",
+            "Requirement already satisfied: llvmlite<0.42,>=0.41.0dev0 in /usr/local/lib/python3.10/dist-packages (from numba<0.59.0,>=0.56.0->ydata-profiling) (0.41.1)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas!=1.4.0,<2.1,>1.1->ydata-profiling) (2023.3.post1)\n",
+            "Requirement already satisfied: joblib>=0.14.1 in /usr/local/lib/python3.10/dist-packages (from phik<0.13,>=0.11.1->ydata-profiling) (1.3.2)\n",
+            "Collecting annotated-types>=0.4.0 (from pydantic>=2->ydata-profiling)\n",
+            "  Downloading annotated_types-0.6.0-py3-none-any.whl (12 kB)\n",
+            "Collecting pydantic-core==2.10.1 (from pydantic>=2->ydata-profiling)\n",
+            "  Downloading pydantic_core-2.10.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.0 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting typing-extensions>=4.6.1 (from pydantic>=2->ydata-profiling)\n",
+            "  Downloading typing_extensions-4.8.0-py3-none-any.whl (31 kB)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.24.0->ydata-profiling) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.24.0->ydata-profiling) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.24.0->ydata-profiling) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.24.0->ydata-profiling) (2023.7.22)\n",
+            "Requirement already satisfied: patsy>=0.5.2 in /usr/local/lib/python3.10/dist-packages (from statsmodels<1,>=0.13.2->ydata-profiling) (0.5.3)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from patsy>=0.5.2->statsmodels<1,>=0.13.2->ydata-profiling) (1.16.0)\n",
+            "Building wheels for collected packages: htmlmin\n",
+            "  Building wheel for htmlmin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for htmlmin: filename=htmlmin-0.1.12-py3-none-any.whl size=27082 sha256=fdfba279f212e465e6d4694a5f1d9332f081c23306b6be2c3a951b92fbe6abda\n",
+            "  Stored in directory: /root/.cache/pip/wheels/dd/91/29/a79cecb328d01739e64017b6fb9a1ab9d8cb1853098ec5966d\n",
+            "Successfully built htmlmin\n",
+            "Installing collected packages: htmlmin, typing-extensions, tangled-up-in-unicode, multimethod, dacite, annotated-types, typeguard, pydantic-core, imagehash, visions, pydantic, phik, ydata-profiling\n",
+            "  Attempting uninstall: typing-extensions\n",
+            "    Found existing installation: typing_extensions 4.5.0\n",
+            "    Uninstalling typing_extensions-4.5.0:\n",
+            "      Successfully uninstalled typing_extensions-4.5.0\n",
+            "  Attempting uninstall: pydantic\n",
+            "    Found existing installation: pydantic 1.10.13\n",
+            "    Uninstalling pydantic-1.10.13:\n",
+            "      Successfully uninstalled pydantic-1.10.13\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "lida 0.0.10 requires fastapi, which is not installed.\n",
+            "lida 0.0.10 requires kaleido, which is not installed.\n",
+            "lida 0.0.10 requires python-multipart, which is not installed.\n",
+            "lida 0.0.10 requires uvicorn, which is not installed.\n",
+            "llmx 0.0.15a0 requires cohere, which is not installed.\n",
+            "llmx 0.0.15a0 requires openai, which is not installed.\n",
+            "llmx 0.0.15a0 requires tiktoken, which is not installed.\n",
+            "tensorflow-probability 0.22.0 requires typing-extensions<4.6.0, but you have typing-extensions 4.8.0 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed annotated-types-0.6.0 dacite-1.8.1 htmlmin-0.1.12 imagehash-4.3.1 multimethod-1.10 phik-0.12.3 pydantic-2.4.2 pydantic-core-2.10.1 tangled-up-in-unicode-0.2.0 typeguard-4.1.5 typing-extensions-4.8.0 visions-0.7.5 ydata-profiling-4.6.1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2067,11 +2169,11 @@
         "\n",
         "# 1. в оригинальный набор данных добавьте колонки с кластерами и работаем с ним\n",
         "\n",
-        "\"\"\"\n",
-        "df['kmeans_cluster'] = kmeans_cluster.labels_\n",
-        "df['dbsscan_cluster'] = dbsscan_cluster.labels_\n",
-        "...\n",
-        "\"\"\"\n",
+        "\n",
+        "df['kmeans_cluster'] = kmeans.labels_\n",
+        "df['dbsscan_cluster'] = dbscan.labels_\n",
+        "\n",
+        "\n",
         "\n",
         "# 2. Выполните фильтрацию относительно каждого кластера и каждого алгоритма (Внимание, кластер -1 не учитываем в DBSSCAN, тк это выбросы. То есть, точки не вошли ни в одни кластер)\n",
         "\"\"\"\n",
@@ -2102,10 +2204,29 @@
         "\n"
       ],
       "metadata": {
-        "id": "-XEU0mlPLCMP"
+        "id": "-XEU0mlPLCMP",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "ae418c06-e8c8-4e03-93b5-a50cbd829c53"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nНа отдельной ячейке выполните профилирование для каждого кластера и каждого алгоритма\\n\\nfrom ydata_profiling import ProfileReport\\n\\nProfileReport(df[df.dbscan_labels == 0]) # фильтруем по кластерам из uniq_labels, получаем красивый результат :)\\n\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "code",
