--- a/ML_lab3.ipynb
+++ b/ML_lab3.ipynb
@@ -71,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,12 +97,12 @@
       ],
       "metadata": {
         "id": "dzr_txLDf-fe",
-        "outputId": "edb84d96-9f51-40d0-b220-090b116c67af",
+        "outputId": "fc853d69-e552-4ee7-8b24-1a1186a8f244",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +120,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "DgnX5MaOEuoD"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -589,26 +589,37 @@
         "for i in dupls:\n",
         "  if (i): count +=1\n",
         "\n",
-        "count\n"
+        "print(count)\n",
+        "print(len(dupls))\n"
       ],
       "metadata": {
         "id": "AIlBilOY2T6a",
-        "outputId": "f29f1117-686f-45f9-f44b-14278d0bc57a",
+        "outputId": "7d095f98-7f06-4e8d-b88c-880e8fcbcf81",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "10677\n",
+            "0        False\n",
+            "1        False\n",
+            "2        False\n",
+            "3        False\n",
+            "4        False\n",
+            "         ...  \n",
+            "10672    False\n",
+            "10673    False\n",
+            "10674    False\n",
+            "10675    False\n",
+            "10676    False\n",
+            "Length: 10677, dtype: bool\n"
+          ]
         }
       ]
     },
@@ -621,26 +632,24 @@
         "for i in dupls:\n",
         "  if (i): count +=1\n",
         "\n",
-        "count"
+        "count\n",
+        "print(len(dupls))"
       ],
       "metadata": {
         "id": "DwSF8HGIV1IM",
-        "outputId": "3e89f5fb-e74e-4421-923b-363c73081294",
+        "outputId": "9bc7f047-4f95-4bb5-f644-0a89f44c521d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "101"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10778\n"
+          ]
         }
       ]
     },
@@ -659,22 +668,22 @@
       ],
       "metadata": {
         "id": "utEK5KD-2ec_",
-        "outputId": "6ae4efcd-6e8b-42c2-8272-0dcd78458dc2",
+        "outputId": "23013ee2-fe9e-46ac-d3b7-37170c1ccb01",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "101"
+              "0"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 6
         }
       ]
     },
@@ -925,16 +934,17 @@
         "encoded_features = encoder.fit_transform(df[cat_features])\n",
         "\n",
         "encoded_columns = encoder.get_feature_names_out(cat_features)\n",
+        "\n",
         "encoded_columns\n"
       ],
       "metadata": {
         "id": "7qHieucyhIp_",
-        "outputId": "ecc659a4-86a0-480d-fe33-35d155fe83cd",
+        "outputId": "29c8f938-4cf4-4da1-95e3-5292e823f6c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -946,7 +956,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 8
         }
       ]
     },
