Вот еще раз доделал

--- a/ML_lab3.ipynb
+++ b/ML_lab3.ipynb
@@ -66,12 +66,12 @@
       ],
       "metadata": {
         "id": "1ctEtJYagg5D",
-        "outputId": "8271486f-665b-4142-d44b-168dafca25c5",
+        "outputId": "41284631-1416-4c79-ca8b-2c22274b6e23",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
       ],
       "metadata": {
         "id": "dzr_txLDf-fe",
-        "outputId": "fc853d69-e552-4ee7-8b24-1a1186a8f244",
+        "outputId": "adcc80ed-720e-49a9-ea4a-b2ee30d2d3cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -584,42 +584,38 @@
       "source": [
         "#Проверка на дубли\n",
         "dupls = df.duplicated()\n",
-        "# Если len нужен был здесь, то он не работает - функция возвращает series булевых и len тупо считает их кол-во\n",
-        "count = 0\n",
-        "for i in dupls:\n",
-        "  if (i): count +=1\n",
-        "\n",
-        "print(count)\n",
-        "print(len(dupls))\n"
+        "dupls\n",
+        "#Дубликатов нет"
       ],
       "metadata": {
         "id": "AIlBilOY2T6a",
-        "outputId": "7d095f98-7f06-4e8d-b88c-880e8fcbcf81",
+        "outputId": "98bea947-7fc5-4dce-d3cf-e7ef7a5d3a44",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "10677\n",
-            "0        False\n",
-            "1        False\n",
-            "2        False\n",
-            "3        False\n",
-            "4        False\n",
-            "         ...  \n",
-            "10672    False\n",
-            "10673    False\n",
-            "10674    False\n",
-            "10675    False\n",
-            "10676    False\n",
-            "Length: 10677, dtype: bool\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0        False\n",
+              "1        False\n",
+              "2        False\n",
+              "3        False\n",
+              "4        False\n",
+              "         ...  \n",
+              "10672    False\n",
+              "10673    False\n",
+              "10674    False\n",
+              "10675    False\n",
+              "10676    False\n",
+              "Length: 10677, dtype: bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     },
@@ -628,28 +624,38 @@
       "source": [
         "df_with_dupls = pd.concat((df, df.loc[0:100]))\n",
         "dupls = df_with_dupls.duplicated()\n",
-        "count = 0\n",
-        "for i in dupls:\n",
-        "  if (i): count +=1\n",
-        "\n",
-        "count\n",
-        "print(len(dupls))"
+        "#Дубликаты созданы\n",
+        "dupls"
       ],
       "metadata": {
         "id": "DwSF8HGIV1IM",
-        "outputId": "9bc7f047-4f95-4bb5-f644-0a89f44c521d",
+        "outputId": "721ed157-385e-46e8-b3fa-f86c0491ef1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10778\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0      False\n",
+              "1      False\n",
+              "2      False\n",
+              "3      False\n",
+              "4      False\n",
+              "       ...  \n",
+              "96      True\n",
+              "97      True\n",
+              "98      True\n",
+              "99      True\n",
+              "100     True\n",
+              "Length: 10778, dtype: bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     },
@@ -658,32 +664,37 @@
       "source": [
         "#Удаление дублей\n",
         "df_no_duplicates = df_with_dupls.drop_duplicates()\n",
-        "df_no_duplicates\n",
-        "\n",
-        "count = 0\n",
-        "for i in dupls:\n",
-        "  if (i): count +=1\n",
-        "\n",
-        "count"
+        "df_no_duplicates.duplicated()"
       ],
       "metadata": {
         "id": "utEK5KD-2ec_",
-        "outputId": "23013ee2-fe9e-46ac-d3b7-37170c1ccb01",
+        "outputId": "531f0dc6-db03-458b-80b5-8631e06ada28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0"
+              "0        False\n",
+              "1        False\n",
+              "2        False\n",
+              "3        False\n",
+              "4        False\n",
+              "         ...  \n",
+              "10672    False\n",
+              "10673    False\n",
+              "10674    False\n",
+              "10675    False\n",
+              "10676    False\n",
+              "Length: 10677, dtype: bool"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -944,7 +955,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
